<resources>
    <string name="font_provider_authority" translatable="false">com.google.android.gms.fonts</string>
    <string name="font_provider_package" translatable="false">com.google.android.gms</string>
    <string name="font_query_emoji" translatable="false">Noto Color Emoji Compat</string>
    <string name="ttu_privacy" translatable="false">https://s.tatatu.com/privacyA_en.html</string>
    <string name="ttu_tos" translatable="false">https://s.tatatu.com/termsA_en.html</string>
    <string name="notification_channel_id" translatable="false">TaTaTu</string>
    <string name="notification_channel_id_chat" translatable="false">TaTaTuChat</string>
    <string name="notification_channel_id_chat_unsent" translatable="false">TaTaTuChatUnsent</string>
    <string name="notification_channel_id_calls" translatable="false">TaTaTuCalls</string>
    <string name="msg_press_back_to_exit">Press back to exit</string>
    <string name="bottom_sheet_cancel">@string/action_cancel</string>
    <string name="bottom_sheet_report">Report</string>
    <string name="bottom_sheet_block">Block</string>
    <string name="bottom_sheet_edit">Edit</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="bottom_sheet_copy_link">Copy link</string>
    <string name="bottom_sheet_inappropriate_post">Inappropriate Post</string>
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_share_profile">Share this profile</string>
    <string name="bottom_sheet_share_as_post">Share as Post</string>
    <string name="bottom_sheet_share_as_message">Share as Message</string>
    <string name="bottom_sheet_share_as_email">Share via Email</string>
    <string name="bottom_sheet_tap_unfollow_hint">Tap Unfollow to Confirm</string>
    <string name="bottom_sheet_tap_cancel_request_hint">Tap Cancel Request to Confirm</string>
    <string name="bottom_sheet_cancel_request">Cancel Request</string>
    <string name="bottom_sheet_unfollow">Unfollow</string>
    <string name="no_results_found">No results found</string>
    <string name="results_found_label">Results for %s</string>
    <string name="number_multiplier_b_string">%sB</string>
    <string name="number_multiplier_m_string">%sM</string>
    <string name="number_multiplier_k_string">%sK</string>
    <string name="share_with_label">Share with:</string>
    <string name="date_min">%s min</string>
    <string name="date_mins">%s mins</string>
    <string name="date_hour">%s hr</string>
    <string name="date_hours">%s hrs</string>
    <string name="date_day">%s day</string>
    <string name="date_days">%s days</string>
    <string name="date_month">%s mth</string>
    <string name="date_months">%s mths</string>
    <string name="date_year">%s yr</string>
    <string name="date_years">%s yrs</string>
    <plurals name="date_min_plur">
        <item quantity="one">@string/date_min</item>
        <item quantity="other">@string/date_mins</item>
    </plurals>
    <plurals name="date_hour_plur">
        <item quantity="one">@string/date_hour</item>
        <item quantity="other">@string/date_hours</item>
    </plurals>
    <plurals name="date_day_plur">
        <item quantity="one">@string/date_day</item>
        <item quantity="other">@string/date_days</item>
    </plurals>
    <plurals name="date_month_plur">
        <item quantity="one">@string/date_month</item>
        <item quantity="other">@string/date_months</item>
    </plurals>
    <plurals name="date_year_plur">
        <item quantity="one">@string/date_year</item>
        <item quantity="other">@string/date_years</item>
    </plurals>
    <string name="action_share">Share</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="dialog_progress_generic">Communicating with TTU servers</string>
    <string name="dialog_progress_generic_2">%s…</string>
    <string name="progress_video_compress">Compressing video %d%%</string>
    <string name="progress_media_upload">Uploading media %d%%</string>
    <string name="no_browser_apps">No browser app found on the device</string>
    <string name="connection_acquired">Data connection available</string>
    <string name="progress_share">Generating share link</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="title_store">Store</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_follow">Follow</string>
    <string name="wfi_balance">Your Balance</string>
    <string name="wfi_friends">&lt;u>Friends&lt;/u></string>
    <string name="wfi_invite">&lt;u>Invite&lt;/u></string>
    <string name="home_title_posts">Posts</string>
    <string name="see_all"><![CDATA[<u>See all</u>]]></string>
    <string name="home_title_suggested">Suggested for you</string>
    <string name="action_add_post">Add Post</string>
    <string name="home_cat_movies">Movies</string>
    <string name="home_cat_series">Series</string>
    <string name="home_cat_games">Games</string>
    <string name="home_cat_sports">Sports</string>
    <string name="home_cat_celeb">Celebrities</string>
    <string name="home_cat_mvideos">Music Videos</string>
    <string name="progress_profile">Fetching profile</string>
    <string name="profile_balance">Your Balance</string>
    <string name="profile_friends"><u>Friends</u></string>
    <string name="profile_invite"><u>Invite</u></string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_insights">View Insights</string>
    <string name="profile_donating">I\'m donating to</string>
    <string name="profile_message">Message</string>
    <string name="profile_followback">Follow Back</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_requested">Requested</string>
    <string name="profile_private">This user\'s activity is private</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_tags">Tags</string>
    <string name="profile_moments">Moments</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_invites">Invited</string>
    <string name="profile_menu_call">call</string>
    <string name="profile_menu_new_call">newcall</string>
    <string name="profile_menu_video_call">videocall</string>
    <string name="profile_menu_settings">settings</string>
    <string name="profile_menu_overflow">overflow</string>
    <string name="profile_menu_more">more</string>
    <string name="follow_earn_label">How much could I earn?</string>
    <string name="follow_requests_label">Follow Requests</string>
    <string name="follow_search_friends_label">Search for your Friends</string>
    <string name="follow_search_invited_friends_label">Search for your Invited Friends</string>
    <string name="follow_search_followers_label">Search for your Followers</string>
    <string name="follow_search_following_label">Search for your Following</string>
    <string name="follow_search_requests_label">Search Follow Requests</string>
    <string name="follow_search_sent_requests_label">Search Sent Follow Requests</string>
    <string name="follow_sent_requests_label">Sent Follow Requests</string>
    <string name="follow_no_friends_label">You don’t have any friends yet…\n Go ahead and invite some!</string>
    <string name="follow_no_friends_sub_label">You can earn 12 TTU equivalent of 3 USD\n when your friends watch a movie!</string>
    <string name="follow_no_friends_button_label">INVITE FRIENDS</string>
    <string name="follow_invite_hint_label">You may only resend invitations once every 7 days</string>
    <string name="follow_requests_confirm">Confirm</string>
    <string name="follow_requests_delete_label">Delete</string>
    <string name="follow_sent_requests_cancel_label">@string/action_cancel</string>
    <string name="follow_invite_resend_label">Resend Invite</string>
    <string name="placeholder">XXX</string>
    <string name="placeholderLong">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="type_account_public_figure">Public Figure</string>
    <string name="type_account_celebrity">Celebrity</string>
    <string name="type_account_charity">Charity</string>
    <string name="type_account_channel">Channel</string>
    <string name="follow_empty_list">No %s yet!</string>
    <string name="result_action_block">%s has been added to your Blocked Profiles</string>
    <string name="result_action_report">%s has been reported</string>
    <string name="result_action_post_report">This post has been reported</string>
    <string name="result_action_unfollow">%s has been unfollowed</string>
    <string name="result_action_cancel_request">%s\'s Follow Request has been canceled</string>
    <string name="profile_fetch_failed">We couldn’t load the user’s profile. Try again later</string>
    <string name="loader_fetching_posts">Fetching your posts</string>
    <string name="videoFailed">Failed to record video.</string>
    <string name="videoCancel">Video recording cancelled</string>
    <string name="content_not_available">Content not available</string>
    <string name="msg_post_share">Select the content you want to share</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="tb_new_post">New Post</string>
    <string name="tb_update_post">Edit Post</string>
    <string name="tb_camera_roll">Gallery</string>
    <string name="tb_privacy_notice">TaTaTu Privacy Notice</string>
    <string name="tb_terms_of_use">TaTaTu Terms of Use</string>
    <string name="next">Next</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="library">Library</string>
    <string name="transitionName">Image</string>
    <string name="basic_internal_storage">Internal Storage</string>
    <string name="image_cropping">Image Cropping are not Successful</string>
    <string name="file_not_create">Temp File not Created</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_edit_post_save">Save</string>
    <string name="progress_post_create">Publishing your post</string>
    <string name="btn_create_email">CREATE EMAIL</string>
    <string name="email_Name_Title">Full name</string>
    <string name="email_Email_Title">Email address</string>
    <string name="msg_almost_don">Almost Done!</string>
    <string name="msg_thrilled">We are thrilled you are here!</string>
    <string name="msg_acknowledge">I acknowledge that I am over 18 years old</string>
    <string name="msg_terms_condition">I agree to the Terms and Conditions and Privacy Policy</string>
    <string name="msg_tatatu_receive">I would like to receive marketing communication from TaTaTu</string>
    <string name="msg_tatatu">I allow TaTaTu to share my personal data with third parties in order to receive more relevant advertising and video recommendations</string>
    <string name="btn_Done">Done</string>
    <string name="notification_title_bold" translatable="false">Three Touches</string>
    <string name="notification_big_des" translatable="false">Six very different men are united by two great passions: football and work. As they train and prep for a particular audition, their lives continually touch and tell the interconnected story of their miserable existence made of successes and moments of glory, but never true happiness.</string>
    <string name="notification_added" translatable="false">New content added</string>
    <string name="chat_room_menu_done" translatable="false">@string/btn_done</string>
    <string name="chat_room_menu_chat" translatable="false">Chat</string>
    <string name="chat_room_menu_call" translatable="false">Call</string>
</resources>