<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- INFO: 2019-08-12    restore for calls -->
    <item
            android:id="@+id/actionNewChat"
            android:title="@string/chat_room_menu_chat"
            android:icon="@drawable/ic_new_chat"
            app:showAsAction="always"/>

    <!-- INFO: 2019-08-12    restore for calls -->
    <item
            android:id="@+id/actionNewCall"
            android:title="@string/chat_room_menu_call"
            android:icon="@drawable/ic_new_call"
            app:showAsAction="always"/>

    <item
            android:id="@+id/actionEdit"
            android:title="@string/bottom_sheet_edit"
            app:showAsAction="always"/>

    <item
            android:id="@+id/actionDone"
            android:title="@string/chat_room_menu_done"
            app:showAsAction="always"
            android:visible="false"/>

</menu>