<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- INFO: 2019-08-12    restore for calls -->
    <item
            android:id="@+id/actionVideoCall"
            android:title="@string/profile_menu_video_call"
            android:icon="@drawable/ic_videocall_active"
            android:enabled="false"
            app:showAsAction="ifRoom"/>

    <!-- INFO: 2019-08-12    restore for calls -->
    <item
            android:id="@+id/actionCall"
            android:title="@string/profile_menu_call"
            android:icon="@drawable/ic_calls_active"
            android:enabled="false"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/actionOverflow"
            android:title="@string/profile_menu_overflow"
            android:icon="@drawable/ic_overflow"
            app:showAsAction="ifRoom"/>

</menu>