<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_sheet_height"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_margin_small_8"
        android:paddingBottom="@dimen/padding_margin_large_30">

        <TextView
            android:id="@+id/bottomSheetReport"
            style="@style/BottomFragmentSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_report"
            android:text="@string/bottom_sheet_report" />

        <TextView
            android:id="@+id/bottomSheetBlock"
            style="@style/BottomFragmentSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_block"
            android:text="@string/bottom_sheet_block"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bottomSheetShare"
            style="@style/BottomFragmentSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_share"
            android:text="@string/bottom_sheet_share" />

    </LinearLayout>
</layout>
