<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_margin_small_8"
        android:paddingBottom="@dimen/padding_margin_large_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_sheet_height">

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetEdit"
                android:drawableStart="@drawable/ic_edit"
                android:text="@string/bottom_sheet_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetShare"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/bottom_sheet_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetDelete"
                android:drawableStart="@drawable/ic_delete"
                android:text="@string/bottom_sheet_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>
