<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_margin_small_8"
        android:paddingBottom="@dimen/padding_margin_large_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_sheet_height"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetShareAsPost"
                android:drawableStart="@drawable/ic_share_as_post"
                android:text="@string/bottom_sheet_share_as_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetShareAsMessage"
                android:drawableStart="@drawable/ic_share_as_message"
                android:text="@string/bottom_sheet_share_as_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/BottomFragmentSheetText"
                android:id="@+id/bottomSheetShareAsEmail"
                android:drawableStart="@drawable/ic_share_as_email"
                android:text="@string/bottom_sheet_share_as_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>
